# undr

./: .buildinfo  .gitignore  INTRODUCTION.md  MANIFEST.in  README.md  cargo.toml  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js  setup.py  test.py  undr_default.toml
.doctrees/: index.doctree
.doctrees/autoapi/undr/: index.doctree
.doctrees/autoapi/undr/bibtex/: index.doctree
.doctrees/autoapi/undr/check/: index.doctree
.doctrees/autoapi/undr/configuration/: index.doctree
.doctrees/autoapi/undr/constants/: index.doctree
.doctrees/autoapi/undr/decode/: index.doctree
.doctrees/autoapi/undr/display/: index.doctree
.doctrees/autoapi/undr/exception/: index.doctree
.doctrees/autoapi/undr/formats/: index.doctree
.doctrees/autoapi/undr/install_mode/: index.doctree
.doctrees/autoapi/undr/json_index/: index.doctree
.doctrees/autoapi/undr/json_index_tasks/: index.doctree
.doctrees/autoapi/undr/path/: index.doctree
.doctrees/autoapi/undr/path_directory/: index.doctree
.doctrees/autoapi/undr/persist/: index.doctree
.doctrees/autoapi/undr/raw/: index.doctree
.doctrees/autoapi/undr/remote/: index.doctree
.doctrees/autoapi/undr/simple/: index.doctree
.doctrees/autoapi/undr/task/: index.doctree
.doctrees/autoapi/undr/version/: index.doctree
.github/workflows/: create_release.yml  publish_pypi.yml  publish_python.yml  test_app.yml  test_python.yml  test_rust.yml  update_documentation.yml
_sources/autoapi/undr/: index.rst.txt
app/: .prettierignore  README.md  bridge.py  build.d.ts  build.js  interface-prebuild.py  package-lock.json  package.json  scripts.js  tsconfig.json
app/interface/: interface.py  pyproject.toml
app/source/: app.tsx
app/source/common/: types.d.ts
app/source/components/: about.tsx  actionDisplay.tsx  configurationPathBar.tsx  dataset.tsx  datasets.tsx  input.tsx  numberInputWithDefault.tsx  preferences.tsx  progress.tsx  select.tsx  setup.tsx  switch.tsx  toolbar.tsx
app/source/hooks/: constants.ts  dimensions.ts  preferences.ts  state.ts  utilities.ts
app/source/main/: env.d.ts  main.ts  preload.ts  tsconfig.json  vite.config.js
app/source/renderer/: index.html  preload.d.ts  renderer.tsx  theme.tsx  tsconfig.json  vite-plugin-react-svgr.js  vite.config.js
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: main.rs
autoapi/undr/: index.html
autoapi/undr/bibtex/: index.html
autoapi/undr/check/: index.html
autoapi/undr/configuration/: index.html
autoapi/undr/constants/: index.html
autoapi/undr/decode/: index.html
autoapi/undr/display/: index.html
autoapi/undr/exception/: index.html
autoapi/undr/formats/: index.html
autoapi/undr/install_mode/: index.html
autoapi/undr/json_index/: index.html
autoapi/undr/json_index_tasks/: index.html
autoapi/undr/path/: index.html
autoapi/undr/path_directory/: index.html
autoapi/undr/persist/: index.html
autoapi/undr/raw/: index.html
autoapi/undr/remote/: index.html
autoapi/undr/simple/: index.html
autoapi/undr/task/: index.html
autoapi/undr/utilities/: index.html
autoapi/undr/version/: index.html
aws/: README.md  app.ts  build.d.ts  build.js  index.mustache  package-lock.json  package.json  style.css  tsconfig.json
aws/source/: app.tsx  index.mustache  theme.tsx
aws/source/components/: content.tsx  select.tsx  spinner.tsx
aws/source/hooks/: dimensions.ts
docs/: conf.py  index.rst  requirements.txt
documentation/: .gitignore  build.py  conf.py  index.md  requirements.txt
documentation/_static/css/: custom.css
python/: .gitignore  MANIFEST.in  README.md  pyproject.toml  setup.py  test.py
python/examples/: loop_count_events.py  loop_persist_count_events.py  map_count_events.py  map_count_events_per_dataset.py  map_persist_count_events.py  task_count_events.py  task_persist_count_events.py  undr.toml
python/source/: __init__.py  __main__.py  bibtex.py  certificates.py  check.py  configuration.py  constants.py  decode.py  display.py  exception.py  formats.py  install_mode.py  json_index.py  json_index_tasks.py  path.py  path_directory.py  persist.py  raw.py  remote.py  simple.py  store.db  task.py  utilities.py  version.py
python/tests/: task.py
python/undr/: __main__.py  bibtex.py  check.py  configuration.py  constants.py  display.py  exception.py  json_index.py  json_index_tasks.py  path.py  path_directory.py  raw.py  simple.py  specification  task.py  utilities.py  version.py
rust/: .gitignore  Cargo.toml  README.md
rust/src/: bibtex.rs  configuration.rs  constants.rs  decode.rs  install_directory.rs  json_index.rs  lib.rs  remote.rs  types.rs
rust/tests/: bibtex.rs  install.rs  undr.toml
scripts/: release_body.py  version.py
source/: __init__.py  __main__.py  bibtex.py  certificates.py  progress.py  raw.py  remote.py  utilities.py
specification/: -index_schema.json  _index_schema.json  undr_schema.json
undr/: _index_schema.json  undr_schema.json
(+33 files in other folders)
