[build-system]
requires = ["setuptools >= 42"]
build-backend = "setuptools.build_meta"

[project]
name = "undr"
authors = [
    {name = "Alexandre Marcireau", email = "alexandre.marcireau@gmail.com"},
]
description = "Download and process Neuromorphic datasets"
readme = "README.md"
requires-python = ">=3.8"
keywords = ["one", "two"]
license = {text = "BSD-3-Clause"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "brotli>=1.0,<2",
    "fastjsonschema>=2.19,<3",
    "numpy>=1.22,<2",
    "requests>=2.31,<3",
    'tomli>=2.0.1,<3; python_version<"3.11"',
]
dynamic = ["version"]

[tool.setuptools.package-data]
"undr.specification" = ["*.json"]

[tool.setuptools.dynamic]
version = {attr = "undr.version.__version__"}

[tool.isort]
profile = "black"
