[package]
name = "undr"
version = "0.1.0"
authors = [
    "International Centre for Neuromorphic Systems",
    "Alexandre Marcireau",
]
description = "The UNDR protocol implemented in Rust"
homepage = "https://github.com/neuromorphicsystems/undr/"
repository = "https://github.com/neuromorphicsystems/undr/"
readme = "../README.md"
license = "MIT"
edition = "2021"
include = ["specification/*.json", "specification/*.toml"]
categories = ["parser-implementations"]
keywords = ["UNDR"]

[dependencies]
brotli = "3.3"
lazy_static = "1.4"
regex = "1.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
toml = "0.5.9"
ureq = "2.5"
url = { version = "2.3", features = ["serde"] }
