[tool.pyinstaller]
name = "interface"
scriptnames = ["interface.py"]
data = {undr = ["undr/-index_schema.json", "undr/undr_default.toml", "undr/undr_schema.json"]}
onefile = false
windowed = false
exclude_modules = []

[build-system]
requires = [
    "jsonschema-rs >= 0.9",
    "lzip >= 1.0",
    "numpy >= 1.20",
    "pyinstaller >= 4.5",
    "pyobjc-framework-SecurityInterface >= 7.3; sys_platform == 'darwin'",
    "requests >= 2.25",
    "toml >= 0.10",
]
build-backend = "pyinstaller"
